fixed: grammatical errors

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                     <div class="col-xs-6 facts">
                                         <!-- counter #2 -->
                                         <div class="count-box">
-                                            <i class="fa fa-mobile"></i>
+                                            <i class="fa fa-mobile-phone"></i>
                                             <h4 class="count">2</h4>
                                             <p class="small">Flutter Apps</p>
                                         </div>
@@ -255,7 +255,7 @@
                                     <div class="col-xs-6 facts">
                                         <!-- counter #3 -->
                                         <div class="count-box">
-                                            <i class="fa fa-arrows"></i>
+                                            <i class="fa fa-mobile-phone"></i>
                                             <h4 class="count">3</h4>
                                             <p class="small">Cordova Apps</p>
                                         </div>
@@ -615,19 +615,19 @@
                                                 Working on several pilot projects/apps including AePS SDK (for biometric based transactions) and FaceAuth for Partners (transactions using face data).
                                             </li>
                                             <li>
-                                                Leveraged cutting edge technology like Kotlin, Android JetPack, LiveData, Data Binding, Room, Actions, MVVM, Retrofit, Dagger2, and Material Design.
+                                                Leveraging cutting edge technology like Kotlin, Android JetPack, LiveData, Data Binding, Room, Actions, MVVM, Retrofit, Dagger2, and Material Design.
                                             </li>
                                             <li>
                                                 Using JUnit and Mockito frameworks for Local Unit testing and Espresso Framework for UI testing and also write test cases.
                                             </li>
                                             <li>
-                                                Worked in agile methodology and involved in scrum meetings every day to discuss the sprint status, technical difficulties and blockers.
+                                                Working in agile methodology and involved in scrum meetings every day to discuss the sprint status, technical difficulties and blockers.
                                             </li>
                                             <li>
-                                                JIRA tool was used for bug reporting, task allocation and tracking the progress of the project.
+                                                JIRA tool being used for bug reporting, task allocation and tracking the progress of the project.
                                             </li>
                                             <li>
-                                                Used BitBucket as project version controller and used it to commit and push the developed working code to repository.
+                                                Using BitBucket as project version controller and used it to commit and push the developed working code to repository.
                                             </li>
                                         </ul>
                                     </p>
