fixed: gramaticals erroe

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <div class="col-sm-6 col-sm-offset-1 scrollimation fade-left in">
                         <h1>Hello, I am Shahbaz Hashmi...</h1>
                         <p>I am Shahbaz Hashmi, a 28 years old Professional Android Developer from Patna, India. I have graduated with an Engineer degree in Computer Science, from the Punjab Technical University (Jalandhar, India). I have a passion to learn
-                            new technologies and analyse algorithms on real world problems. I am also an active contributor on <a href="https://stackoverflow.com/users/4685284/shahbaz-hashmi">Stack Overflow</a> and <a href="https://github.com/shahbazhashmi">GitHub</a>.</p>
+                            new technologies and analyze algorithms on real-world problems. I am also an active contributor on <a href="https://stackoverflow.com/users/4685284/shahbaz-hashmi">Stack Overflow</a> and <a href="https://github.com/shahbazhashmi">GitHub</a>.</p>
 
                     </div>
                 </div>
@@ -598,37 +598,16 @@
                                     <h5><i>Tasks and Achievements</i></h5>
                                     <p>
                                         <ul>
-                                            <li>
-                                                Prime role in Android mobile team and developed whole <b>Flight Booking</b>, <b>Bus Booking</b>, <b>Hotel Booking</b>, and <b>Tours & Packages</b> modules in <a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.bnb.paynearby">PayNearby Retailer</a>                                                App.
-                                            </li>
-                                            <li>
-                                                Also responsible for ongoing development of <b>Recharge</b> and <b>Bill Payments</b> modules.
-                                            </li>
-                                            <li>
-                                                Got appreciation from the Director for streamlining the Recharge Bussiness - Improved customer experience and reduced complaints by 50% within 60 days.
-                                            </li>
-                                            <li>
-                                                Achieved expertise in Android Apps, Framework and native stack development.
-                                            </li>
-
-                                            <li>
-                                                Working on several pilot projects/apps including AePS SDK (for biometric based transactions) and FaceAuth for Partners (transactions using face data).
-                                            </li>
-                                            <li>
-                                                Leveraging cutting edge technology like Kotlin, Android JetPack, LiveData, Data Binding, Room, Actions, MVVM, Retrofit, Dagger2, and Material Design.
-                                            </li>
-                                            <li>
-                                                Using JUnit and Mockito frameworks for Local Unit testing and Espresso Framework for UI testing and also write test cases.
-                                            </li>
-                                            <li>
-                                                Working in agile methodology and involved in scrum meetings every day to discuss the sprint status, technical difficulties and blockers.
-                                            </li>
-                                            <li>
-                                                JIRA tool being used for bug reporting, task allocation and tracking the progress of the project.
-                                            </li>
-                                            <li>
-                                                Using BitBucket as project version controller and used it to commit and push the developed working code to repository.
-                                            </li>
+                                            <li>Prime role in Android mobile team and developed whole <b>Flight Booking</b>, <b>Bus Booking</b>, <b>Hotel Booking</b>, and <b>Tours & Packages</b> modules in <a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.bnb.paynearby">PayNearby Retailer</a>                                                App.</li>
+                                            <li>Also responsible for ongoing development of Recharge and Bill Payments modules.</li>
+                                            <li>Got appreciation from the Director for streamlining the Recharge Bussiness - Improved customer experience and reduced complaints by 50% within 60 days.</li>
+                                            <li>Achieved expertise in Android Apps, Framework, and native stack development.</li>
+                                            <li>Working on several pilot projects/apps including AePS SDK (for biometric-based transactions) and FaceAuth for Partners (transactions using face data).</li>
+                                            <li>Leveraging cutting edge technology like Kotlin, Android JetPack, LiveData, Data Binding, Room, Actions, MVVM, Retrofit, Dagger2, and Material Design.</li>
+                                            <li>Using JUnit and Mockito frameworks for Local Unit testing and Espresso Framework for UI testing and also write test cases.</li>
+                                            <li>Working in agile methodology and involved in scrum meetings every day to discuss the sprint status, technical difficulties, and blockers.</li>
+                                            <li>JIRA tool being used for bug reporting, task allocation, and tracking the progress of the project.</li>
+                                            <li>Using BitBucket as project version controller and used it to commit and push the developed working code to the repository.</li>
                                         </ul>
                                     </p>
                                 </div>
@@ -644,16 +623,16 @@
                                     <p>
                                         <ul>
                                             <li>
-                                                Got probation cleared within 1 month instead of 3 months for the oustanding performance.
+                                                Got probation cleared within 1 month instead of 3 months for the exceptional performance.
                                             </li>
                                             <li>
                                                 Have worked on almost all popular technologies (HTML5, CSS3, JS, PHP, MySQL, Cordova).
                                             </li>
                                             <li>
-                                                Developed a native android app to get heart rate of the user on wearable device. And to sync the data with the mobile app.
+                                                Developed a native android app to get the heart rate of the user on the wearable device. And to sync the data with the mobile app.
                                             </li>
                                             <li>
-                                                Developed a native android app which runs on a custom microcontroller and communicates over TCP/IP layer.
+                                                Developed a native android app that runs on a custom microcontroller and communicates over TCP/IP layer.
                                             </li>
                                             <li>
                                                 Worked on BitGo SDK to support cryptocurrency transactions for a web application.
@@ -662,13 +641,13 @@
                                                 Developed a Cordova library to communicate with Yes Bank UPI SDK written for Android (Java).
                                             </li>
                                             <li>
-                                                Zoho tool was used for bug reporting, task allocation and tracking the progress of the project.
+                                                Zoho tool was used for bug reporting, task allocation, and tracking the progress of the project.
                                             </li>
                                             <li>
-                                                Used BitBucket as project version controller and used it to commit and push the developed working code to repository.
+                                                Used BitBucket as project version controller and used it to commit and push the developed working code to the repository.
                                             </li>
                                             <li>
-                                                Worked as a Technical Lead for last 4 months in the company.
+                                                Worked as a Technical Lead for the last 4 months in the company.
                                             </li>
                                         </ul>
                                     </p>
