--- a/index.html
+++ b/index.html
@@ -600,10 +600,10 @@
                                         <ul>
                                             <li>Prime role in Android mobile team and developed whole <b>Flight Booking</b>, <b>Bus Booking</b>, <b>Hotel Booking</b>, and <b>Tours & Packages</b> modules in <a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.bnb.paynearby">PayNearby Retailer</a>                                                App.</li>
                                             <li>Also responsible for ongoing development of Recharge and Bill Payments modules.</li>
-                                            <li>Got appreciation from the Director for streamlining the Recharge Bussiness - Improved customer experience and reduced complaints by 50% within 60 days.</li>
+                                            <li>Got appreciation from the Director for streamlining the Recharge Business - Improved customer experience and reduced complaints by 50% within 60 days.</li>
                                             <li>Achieved expertise in Android Apps, Framework, and native stack development.</li>
                                             <li>Working on several pilot projects/apps including AePS SDK (for biometric-based transactions) and FaceAuth for Partners (transactions using face data).</li>
-                                            <li>Leveraging cutting edge technology like Kotlin, Android JetPack, LiveData, Data Binding, Room, Actions, MVVM, Retrofit, Dagger2, and Material Design.</li>
+                                            <li>Leveraging cutting edge technology like Kotlin, Android JetPack, LiveData, Data Binding, Room, Actions, MVVM, Retrofit, Dagger 2, and Material Design.</li>
                                             <li>Using JUnit and Mockito frameworks for Local Unit testing and Espresso Framework for UI testing and also write test cases.</li>
                                             <li>Working in agile methodology and involved in scrum meetings every day to discuss the sprint status, technical difficulties, and blockers.</li>
                                             <li>JIRA tool being used for bug reporting, task allocation, and tracking the progress of the project.</li>
